Add httprequest logic
